Added the missing summaries.

--- a/article.tex
+++ b/article.tex
@@ -171,7 +171,7 @@ needs of modeling stakeholders.
 
 The author stresses that this kind of methodology can be especially useful in an Enterprise Model paradigm in order to tackle complexity, changing requirements, modeling as knowledge representation and the generation of “conceptual model”-awareness at run-time.
 
-In order to properly introduce this methodology, a framework and an architecture based on its principles are showed. The framework focuses on adaptability, extensibility, operability, integrability and usability along different framework modules such as tracking system, reusable asset repositories, prototyping environment and development channels. More details on the framework’s functionalities can be found in the next figure.
+In order to properly introduce this methodology, a framework and an architecture based on its principles are showed. The framework focuses on adaptability, extensibility, operability, integrability and usability along different framework modules such as tracking system, reusable asset repositories, prototyping environment and development channels. 
 
 Finally this framework is instantiated within the Open Model Initiative Laboratory to support meta-modeling research projects and to test how would the AMME approach work under a real environment. 
 
@@ -211,7 +211,72 @@ In spite of defining the language top down with strict semantics, they developed
 They identified several positive finding on the effects of Agile within MDE.
 Agile Methods within the development of graphical DSLs is a success story as it facilitates communication with domain experts and development requires flexibility both in tools and communication.
 However, the authors point out that further conceptual studies in this area are required.
- 
+
+\subsection{Towards improving agility in model driven development}
+
+This paper is the initial paper in a proposed series of publications that sets the stage for the research to be conducted by the authors. The authors have identified gaps in the corpus of knowledge of the field of agile model driven development. They have identified gaps in 1) the understanding of the state of practice of agile model driven development 2) the benefits that agile MDD is supposed to provide and 3) identifying the challenges that beset the adoption of agile MDD \cite{alfraihi2016towards}.
+
+The authors begin by describing Model Driven Development as a new paradigm where models are the main artefact in software development and from which code is generated. They describe agile development as an approach that imposes a disciplined project management structure upon software development. To the authors, both MDD and Agile methods share a core aim of accelerating the development process yet their approaches to achieve this aim are different.
+
+In this paper, a contrast between agile and MDD was made. The first contrast was in the difference in abstraction levels of the main artefacts in either approach. It was observed that while MDD emphasises the importance of high-level models, agile was heavily code-centric. Another contrast was in the fact that Agile methods were mainly focused on the methodological (organizational) aspects of software development while MDD is focused on the architectural aspects. Finally, agile methods are people oriented with each iteration incorporating customer feedback and an emphasis on teamwork while MDD approaches are focused on the tools and technologies to develop a system.
+
+For all their contrasts, these two approaches do share some similarities. To begin with, both of them aim to reduce the gap between requirements analysis and implementation and hence the errors that arise from incorrect formulation. In agile this is achieved by using short incremental iteration for development with direct customer collaboration while MDD does so by automating the development process. In addition, the automation in code generation in MDD implies faster development which is the promise of agility. Moreover, the degree of abstraction in design, in MDD, consorts with what Agile tries to achieve: eliminate the gap between customer and developers, and provide rapid feedback to validate the system.
+
+To the authors, agile model driven development is an attempt to get the best of both paradigms while mitigating their drawbacks. To achieve this, significant research needs to be conducted to address the gaps identified. There is also a brief section on related work where a review of the current research in agile model driven development is presented. This literature review shows that most of the current work in the field is aimed at classifying how agile and MDD approaches are combined. The authors point out that none of the published literature in the field addresses the questions of benefits and challenges of agile MDD \cite{matinnejad2011agile,stavru2013challenges,whittle2014state}.
+
+Finally, the paper outlines the proposed next steps for the research and how the authors plan to address their research question. This includes conducting a systematic literature review, carrying out an interview-based survey, developing an agile MDD framework and conducting a case study to evaluate the usability and effectiveness of the proposed framework.
+
+\subsection{Agile model driven development in practice}
+
+In this paper, a case study is presented where agile model driven development approaches are applied to the development of a real time telecommunications system at Motorola \cite{zhang2011agile}. In this case study, the investigators combined system-level agile process (SLAP) and an MDD process into one to speed up development rate, improve product quality and shorten delivery cycle time. SLAP is an agile process adopted at Motorola that uses scrum as a baseline and includes certain extreme programming practices. SLAP divides a software development life cycle into multiple iterations. Each iteration consists of three sprints: application requirements and architecture, development, and system integration feature testing (SIFT). Each sprint is five weeks long and has the same set of activities (called its calendar). 
+
+
+The MDD process used at Motorola is based on the unified software development process process. It divides a software development life cycle into multiple milestone phases over time (such as inception or elaboration), and each milestone phase consists of one or more iterations. Each iteration contains the same set of core development activities (such as requirements analysis or high-level design) and follows a tailored V-Model process.
+
+SLAP divides a software development life cycle into multiple iterations. Each iteration consists of three sprints: application requirements and architecture, development, and system integration feature testing (SIFT). Each sprint is five weeks long and has the same set of activities (called its calendar).
+
+The plan was to combine the agile process (SLAP) with the MDD process in a manner that inherits the benefits of both while avoiding their shortcomings. The strategy was to take SLAP as the backbone process and map MDD iterations and activities to the corresponding SLAP sprints and activities. In this way, like SLAP, an iteration in agile MDD still consists of three sprints.The sprint for requirements specification and architecture is the same as the one in SLAP. The development sprint includes requirements analysis, high-level design, detailed design, code generation, UML unit testing, and integration testing. 
+
+The implementation mainly involved applying agile practices in MDD in the following manner. Coding was replaced by modelling with attendant code generation from the models. The concept of paired coding was replaced by paired modelling where a junior and senior developer were paired to model together. Test driven modelling replaced test driven development where UML sequence diagrams were first created and used to drive UML design and development of test cases. Iterative and incremental modelling was also used where UML modelling was done over several sprints. Modelling was also done as a live design documentation to minimize manual documentation. Continuous modeling corresponded to the agile practice of continuous integration.
+
+The combination of agile methods with MDD approaches in this case study had positive outcomes as follows. First, due to the code generation capacity of MDD, 93% of the entire component code was automatically generated leading to an increase in productivity of the workers as they realised a three-fold increase in source code lines per staff month as compared with hand coding. Secondly, the quality of the automatically generated code in terms of defects density was significantly higher than manual code. 
+
+The authors concluded that from the MDD perspective, the key to success in agile MDD is maximizing automation using the MDD tools to enable mistake-free (high quality) development and significant productivity increase. From the agile perspective, the key is to effeciently achieve end-to-end iterations, from system engineering all the way down to system testing. Ultimately, the novelty of agile MDD may make it difficult for organizations to realise short term benefits from its implementation but it holds promise for large long term projects with multiple releases.
+
+\subsection{Limitations of Agile Software Processes}
+
+Turk et. al. \cite{TurkFR14} identify limitations that apply to many of the published agile processes in terms of the types of projects in which their application may be problematic. They describe some of the situations in which agile processes may generally not be applicable and one of them is directly reflecting to the application of MDE in the agile software process. The limitations of agile processes are summarized as follows:
+
+\begin{description}
+\item[Limited support for distributed development environments:] software. Documentation and models should be created and maintained only if they provide value to the project and project stakeholders. Otherwise, face-to-face communication is as important in distributed environments as the non-distributed environment.
+\item[Limited support for subcontracting:] The process may be an iterative, incremental approach, but the subcontractor may have to make the process predictive by specifying the number of iterations and the deliverables of each iteration in order to compete.
+\item[Limited support for building reusable artifacts:] While there seems to be a case for applying agile processes to the development of reusable artifacts, it is not clear how agile processes can be suitably adapted.
+\item[Limited support for development involving large teams:] There may be opportunities for teams to use agile practices, but the degree of agility possible may be less than that found in smaller projects.
+\item[Limited support for developing safety-critical software:] it can be assumed that agile and formal software development are not incompatible but can be combined when needed: Formal techniques may be used in an agile way to handle critical pieces of the software to increase quality and confidence.
+\item[Limited support for developing large, complex software:] The assumption that code refactoring removes the need to design for change may not hold for large complex systems in particular. The complexity and size of such software may make strict code refactoring costly and error-prone. Models can play an important role here, especially if tools exist for generating significant portions of the code from the models. This view of models as the central artifacts for evolving systems is at the heart of the Object Management Group’s (OMG) Model-Driven Architecture (MDA) approach.
+\end{description}
+
+\subsection{Agile Model-Driven Engineering in Mechatronic Systems - An Industrial Case Study}
+
+Eliason et. al. \cite{Eliasson2014} describe how agile work methods combined with MDE can improve and speed up the prototyping of a mechatronic system in a car. A car consists of more then 100 electronic control modules (ECU) , collaborating in a network and executing several gigabytes of software. Most of the ECUs, with their belonging electromechanical systems, are developed by third party suppliers, and then integrated in the overall car system by engineering teams at VCG.  A lot of the software development happens before the actual delivery of the third party systems. Because of this, the engineering teams at VCG has to make a lot of assumptions about the plant model of these systems, which often leads to costly errors and software bugs later in the development process. 
+
+The authors of the paper conducts two case studies at Volvo Car Group (VCG) in Sweden, based on a preliminary exploratory study. The research questions of the study are as follows: 
+
+\begin{enumerate}
+\item What are the causes that lead to assumptions in distributed mechatronic development and what are the consequences? 
+\item Does the combination of MDE and agile methods increase the knowledge in earlier phases of the project compared to a plan driven process? 
+\item What impact does faulty assumptions within the test environment have on the product and the process? 
+\end{enumerate}
+
+Two case studies where conducted on the engineering teams responsible for the clutch control for the electrical drivetrain in a hybrid vehicle and for the active high beam highlight. Both case studies implemented MDE and agile methods in the workflow. The studies indicate that the development cycle where shortened by implementing the new methods in the engineering teams, but that one of the biggest problem to address is the faulty plant models delivered from the third party vendors. The paper concludes with that MDE and agile methods can successfully be combined to speed up the development phase of a software system in a car. With faster feedback methods from the agility framework, the developers were able to address holes in their knowledge and decrease the number of errors in their preliminary software. The paper also suggested more future work with MDE methods, and more automated code generation.
+
+\subsection{Mockup-Driven Development: Providing agile support for Model-Driven Web Engineering}
+
+Rivero et. al. \cite{RIVERO2014670} introduces a bottom-up driven approach on implementing model-driven web engineering. Instead of using the traditional top-down approach in model-driven engineering, where application content is modeled initially, the authors suggest to invert the development process and start with the user interface-mockups. From the mockups, code generation and model-driven engineering methods are used to build the actual functional software. By inverting the normal top-down approach normally found in MDE, the authors argue that the result is an agile prototype-based iterative process, with the advantages of automatic code-generation and documentation from MDE. 
+
+The paper concludes that their method reduces the errors and effort in model building, while at the same time allows introducing agile features to the modeling process. By generating code based on mockups, the authors method shows a fast and agile way of developing user friendly web application, where non domain-experts can create functional web design straight from they’re conceptualized mockups. For future work the authors will keep testing and validating the developed tool by using it to build applications. They are also extending the tool to provide code generation capabilities for common Web technologies and architectures.
+
+
 \section{Conclusion}
 
 TODO ARTE write a conclusion %TODO ARTE
