--- a/lib.bib
+++ b/lib.bib
@@ -122,3 +122,92 @@ title={Manifesto for Agile Software Development},
 year=2001,
 howpublished={\url{http://agilemanifesto.org/}}
 }
+
+@inproceedings{alfraihi2016towards,
+  title={Towards Improving Agility in Model-driven Development.},
+  author={Alfraihi, Hessa},
+  booktitle={STAF Doctoral Symposium/Showcase},
+  pages={2--10},
+  year={2016}
+}
+
+@inproceedings{matinnejad2011agile,
+  title={Agile model driven development: An intelligent compromise},
+  author={Matinnejad, Reza},
+  booktitle={Software Engineering Research, Management and Applications (SERA), 2011 9th International Conference on},
+  pages={197--202},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{stavru2013challenges,
+  title={Challenges of Model-driven Modernization-An Agile Perspective.},
+  author={Stavru, Stavros and Krasteva, Iva and Ilieva, Sylvia},
+  booktitle={MODELSWARD},
+  pages={219--230},
+  year={2013}
+}
+
+@article{whittle2014state,
+  title={The state of practice in model-driven engineering},
+  author={Whittle, Jon and Hutchinson, John and Rouncefield, Mark},
+  journal={IEEE software},
+  volume={31},
+  number={3},
+  pages={79--85},
+  year={2014},
+  publisher={IEEE}
+}
+
+@article{zhang2011agile,
+  title={Agile model-driven development in practice},
+  author={Zhang, Yuefeng and Patel, Shailesh},
+  journal={IEEE software},
+  volume={28},
+  number={2},
+  pages={84--91},
+  year={2011},
+  publisher={IEEE}
+}
+
+@article{TurkFR14,
+  author    = {Dan Turk and
+               Robert B. France and
+               Bernhard Rumpe},
+  title     = {Limitations of Agile Software Processes},
+  journal   = {CoRR},
+  volume    = {abs/1409.6600},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.6600},
+  archivePrefix = {arXiv},
+  eprint    = {1409.6600},
+  timestamp = {Wed, 07 Jun 2017 14:40:26 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/corr/TurkFR14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@conference{Eliasson2014,
+author={Eliasson, Ulf and Heldal, Rogardt and Lantz, Jonn A. and Berger, Christian},
+title={Agile Model-Driven Engineering in Mechatronic Systems - An Industrial Case Study},
+booktitle={Lecture Notes in Computer Science: 17th International Conference on Model-Driven Engineering Languages and Systems (MODELS)},
+isbn={978-3-319-11653-2},
+pages={433-449},
+abstract={Model-driven engineering focuses on structuring systems as well as permitting domain experts to be directly involved in the software development. Agile methods aim for fast feedback and providing crucial knowledge early in the project. In our study, we have seen a successful combination of MDE and agile methods to support the development of complex, software-driven mechatronic systems. We have investigated how combining MDE and agile methods can reduce the number of issues caused by erroneous assumptions in the software of these mechatronic systems. Our results show that plant models to simulate mechanical systems are needed to enable agile MDE during the mechatronic development. They enable developers to run, verify, and validate models before the mechanical systems are delivered from suppliers. While two case studies conducted at Volvo Car Group confirm that combining MDE and agile works, there are still challenges e.g. how to optimize the development of plant models.},
+year={2014},
+keywords={Model Driven Engineering; Agile; Mechatronic Software Development; Virtual Testing; Assumptions; Plant Models},
+}
+
+@article{RIVERO2014670,
+title = "Mockup-Driven Development: Providing agile support for Model-Driven Web Engineering",
+journal = "Information and Software Technology",
+volume = "56",
+number = "6",
+pages = "670 - 687",
+year = "2014",
+issn = "0950-5849",
+doi = "https://doi.org/10.1016/j.infsof.2014.01.011",
+url = "http://www.sciencedirect.com/science/article/pii/S0950584914000226",
+author = "José Matías Rivero and Julián Grigera and Gustavo Rossi and Esteban Robles Luna and Francisco Montero and Martin Gaedke",
+keywords = "Mockups, User-Interface, Agile, Web Engineering, MDD"
+}
+
