--- a/article.tex
+++ b/article.tex
@@ -239,7 +239,7 @@ The plan was to combine the agile process (SLAP) with the MDD process in a manne
 
 The implementation mainly involved applying agile practices in MDD in the following manner. Coding was replaced by modelling with attendant code generation from the models. The concept of paired coding was replaced by paired modelling where a junior and senior developer were paired to model together. Test driven modelling replaced test driven development where UML sequence diagrams were first created and used to drive UML design and development of test cases. Iterative and incremental modelling was also used where UML modelling was done over several sprints. Modelling was also done as a live design documentation to minimize manual documentation. Continuous modeling corresponded to the agile practice of continuous integration.
 
-The combination of agile methods with MDD approaches in this case study had positive outcomes as follows. First, due to the code generation capacity of MDD, 93% of the entire component code was automatically generated leading to an increase in productivity of the workers as they realised a three-fold increase in source code lines per staff month as compared with hand coding. Secondly, the quality of the automatically generated code in terms of defects density was significantly higher than manual code. 
+The combination of agile methods with MDD approaches in this case study had positive outcomes as follows. First, due to the code generation capacity of MDD, 93\% of the entire component code was automatically generated leading to an increase in productivity of the workers as they realised a three-fold increase in source code lines per staff month as compared with hand coding. Secondly, the quality of the automatically generated code in terms of defects density was significantly higher than manual code. 
 
 The authors concluded that from the MDD perspective, the key to success in agile MDD is maximizing automation using the MDD tools to enable mistake-free (high quality) development and significant productivity increase. From the agile perspective, the key is to effeciently achieve end-to-end iterations, from system engineering all the way down to system testing. Ultimately, the novelty of agile MDD may make it difficult for organizations to realise short term benefits from its implementation but it holds promise for large long term projects with multiple releases.
 
