Added the conclusion.

--- a/article.tex
+++ b/article.tex
@@ -279,7 +279,40 @@ The paper concludes that their method reduces the errors and effort in model bui
 
 \section{Conclusion}
 
-TODO ARTE write a conclusion %TODO ARTE
+This section summarizes the results of the survey and present the conclusion extracted.
+Despite the survey covered the study of just 13 papers, good results and relevant information were found.
+
+We proceed by answering the three research questions proposed in Section 2.
+
+\begin{description}
+	\item[RQ 1:] To what extent is Model Driven Engineering used in Agile Development Processes?
+\end{description}
+The research conducted has revealed that several cases exists, both in industry and academia, where it is been trying to apply AMDD.
+However, the initial gap between agile and MDD is preventing in many cases the combination of these two techniques in a more straight way.
+While MDD emphasises the importance of high-level models, agile is heavily code-centric.
+Also agile methods are mainly focused on the methodological (organizational) aspects of software development while MDD is focused on the architectural aspects.
+Furthermore, while traditionally MDD techniques follow a top-down approach, agile proposes a bottom-up.
+Nevertheless, projects that were able to overcome this initial gap, and solved the "differences" by taking out the best of each, showed promising results in the end.
+
+
+\begin{description}
+	\item[RQ 2:] Does MDSE improve the efficiency within an agile development environment?
+\end{description}
+
+Accordingly to the reports we found during the research, projects that eventually incorporated or followed AMDD improved the results in some way.
+The study case of Volvo Car Group revealed that MDE and agile methods can successfully be combined to speed up the development phase of a software system in a car\cite{Eliasson2014}.
+Rivero et. al. \cite{RIVERO2014670} showed that by generating code based on mockups, the authors method shows a fast and agile way of developing user friendly web application, where non domain experts can create functional web design straight from their conceptualized mockups.
+The results in the case of Motorola \cite{zhang2011agile} declared that 93\% of the entire component code was automatically generated and the quality of the automatically generated code in terms of defects density was significantly higher than manual code.
+
+\begin{description}
+	\item[RQ 3:] In what domains and for what purposes is agile modeling applied?
+\end{description}
+The survey reveals that most of the projects documented in the papers belong to telecommunication, automation and industrial development in general.
+The information extracted suggests that there is not a specific domain for using AMDD.
+If the environment of the project involves stakeholders, domain experts, and developers, AMDD can be incorporated to improve the cooperation between them by creating models which are just barely good enough.
+By following the agile approach, it will be provided rapid feedback that will allow developers to address holes in their knowledge and decrease the number of errors in their preliminary software.
+
+The research reveals that in spite of the combination of Agile Methods ands MDE not being mature yet, there are several cases where it is been applied and providing promising results. A further and extended survey can provide more detailed guidelines for next steps in either academia or industry. It is key that both interact between them, so better research and applications will be performed.
 
 %----------------------------------------------------------------------------------------
 %	REFERENCE LIST
