--- a/article.tex
+++ b/article.tex
@@ -75,7 +75,11 @@
 \thispagestyle{firstpage}
 
 
-\lettrineabstract{Lorem ipsum dolor sit amet, TODO ARTE writes the abstract consectetur adipiscing elit. Fusce maximus nisi ligula. Morbi laoreet ex ligula, vitae lobortis purus mattis vel. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec ac metus ut turpis mollis placerat et nec enim. Duis tristique nibh maximus faucibus facilisis. Praesent in consequat leo. Maecenas condimentum ex rhoncus, elementum diam vel, malesuada ante.} %TODO ARTE
+
+\lettrineabstract{Model Driven Engineering together with its synonymous is an approach to Software Engineering, which promotes the usage of abstract model as primary assets during the development process. Concrete software artifacts can be generated from models with few to none human interaction. It has its origin academia and has been adopted from industrial consortiums.
+Agile is another approach, which has arisen in the practice of Software Engineering. It describes a set of values and principles for software development under which requirements and solutions iteratively evolve through the collaborative effort of self-organizing cross-functional teams. The idea is to put the individual and its interactions over fixed plans and schedules.
+Both approaches have been considered to be contradicting. Indeed this paper reveals that there is not much material available, which consider a combination of both. Though there exists evidence that both approaches can be combined. This requires an adaption of the approaches with respect to the other but also yield promising positive results.
+}
 %----------------------------------------------------------------------------------------
 %	ARTICLE CONTENTS
 %----------------------------------------------------------------------------------------
