Pre-Final version of the paper.

--- a/lib.bib
+++ b/lib.bib
@@ -211,3 +211,39 @@ author = "José Matías Rivero and Julián Grigera and Gustavo Rossi and Esteban
 keywords = "Mockups, User-Interface, Agile, Web Engineering, MDD"
 }
 
+@misc{IEEEglossary,
+title = {IEEE Standard Glossary of Software Engineering Terminology, IEEE std 610.12-1990},
+year = {1990}
+}
+  
+@article{RODRIGUESDASILVA2015139,
+title = "Model-driven engineering: A survey supported by the unified conceptual model",
+journal = "Computer Languages, Systems \& Structures",
+volume = "43",
+number = "Supplement C",
+pages = "139 - 155",
+year = "2015",
+issn = "1477-8424",
+doi = "https://doi.org/10.1016/j.cl.2015.06.001",
+url = "http://www.sciencedirect.com/science/article/pii/S1477842415000408",
+author = "Alberto Rodrigues da Silva",
+keywords = "Model, Metamodel, Modeling language, Software system, Model-driven engineering, Model-driven approaches"
+}
+
+@book{BrambillaCabotW2017,
+author = {Brambilla, Marco and Cabot, Jordi and Wimmer, Manuel},
+edition = {2nd},
+isbn = {1608458822, 9781608458820},
+publisher = {Morgan {\&} Claypool Publishers},
+title = {{Model-Driven Software Engineering in Practice}},
+year = {2017}
+}
+
+@misc{OMG2015UML,
+author = {OMG},
+title = {{Unified Modeling Language (UML) v.2.4.1}},
+url = {http://www.omg.org/spec/UML},
+howpublished={\url{http://www.omg.org/spec/UML}},
+year = {2015}
+}
+
